# GoIT

./: Dockerfile  README.md  blokII_mod.1_zad.2.py  blokII_mod.3_zad.#3.1.py  blokII_mod.3_zad.#3.2.py  blokII_mod.5.zad.#5.1.py  pyproject.toml  zad5.py  zadanie1.py
