[tool.poetry]
name = "Application-Personal-Assistant"
version = "0.1.0"
description = "Address book and notebook"
authors = ["Marta, Alicja, Ola, Paweł, Kamil, authors@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

